--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/sailendhran.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/AdityaPrerepa.jpg" class="hoverZoomLink"></a>
+                <a href="images/sailendhran.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/sailendhran.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:10px;width:100%;vertical-align:middle">
-                <h2>Work Experience</h2>
+                <h2>Certifications</h2>
                 <p>
-                  I'm broadly interested in Systems & Networking. Recently, I've been interested in embedding intelligence in large microservice deployments, and optimizing the serving of large models.
+                  Terrform Certified Associate
+                </p>
+                <p>
+                  Certified Kubernetes Administrator
+                </p>
+                <p>
+                  AWS Solution Architect Professional
                 </p>
               </td>
             </tr>
