--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   I'm currently working as cloud consultant in Wellington, New Zealand. I've worked in Cloud and Devops space for about 13 years and been part of global organizations and local NZ companies.
                 </p>
                 <p>
-                  I have (or will have) worked/interned at <a href="aol.com">AOL</a>, <a href="apigee.com" >Apigee</a>, <a href="https://datastax.com/">Datastax</a>. In NZ I worked at <a href="eroad.com">EROAD</a>, <a href="bnz.co.nz" >Bank of New Zealand</a>, <a href="https://internetnz.nz/">InternetNZ</a>.
+                  I have worked at <a href="aol.com">AOL</a>, <a href="apigee.com" >Apigee</a>, <a href="https://datastax.com/">Datastax</a>. In NZ I worked at <a href="eroad.com">EROAD</a>, <a href="bnz.co.nz" >Bank of New Zealand</a>, <a href="https://internetnz.nz/">InternetNZ</a>.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:sailendhran560@gmail.com">Email</a> &nbsp;/&nbsp;
