update and publish

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <p>
                   AWS Solution Architect Professional
                 </p>
+                <p>
+                  AWS certified Sysops Administrator
+                </p>
               </td>
             </tr>
           </tbody></table>
