--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Sailendhran Paramanandhan
+                  Sailendhran Paramanandhan (Shail)
                 </p>
                 <p>An experienced cloud infrastructure specialist looking to design and build solutions for Products and Enterprises. A Senior SRE who worked with large scale distributed systems and cloud deployments globally, curious to learn about complex systems and underlying problems and keen to understand root causes and needs for automation. Love to work with passionate teams, collaborate and cultivate a growth mindset.
 </p>
